--- a/Microservices/product-service/src/main/resources/application.properties
+++ b/Microservices/product-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/Microservice
-spring.datasource.username=root
+spring.datasource.username=sammy
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 eureka.client.serviceUrl.defaultZone =http://localhost:8761/eureka
