--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/Microservice
-spring.datasource.username=root
+spring.datasource.username=sammy
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
